# ChangeLog for sys-kernel/pegasos-dev-sources
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/pegasos-dev-sources/ChangeLog,v 1.18 2004/11/15 12:11:43 dholm Exp $

*pegasos-dev-sources-2.6.9-r2 (15 Nov 2004)

  15 Nov 2004; David Holm <dholm@gentoo.org>
  +pegasos-dev-sources-2.6.9-r2.ebuild:
  Added security fix from bug #70681.
  Removed old kernels.

*pegasos-dev-sources-2.6.9-r1 (24 Oct 2004)

  24 Oct 2004; David Holm <dholm@gentoo.org>
  +pegasos-dev-sources-2.6.9-r1.ebuild:
  Added a couple of new patches.

*pegasos-dev-sources-2.6.9 (19 Oct 2004)

  19 Oct 2004; David Holm <dholm@gentoo.org>
  +pegasos-dev-sources-2.6.9.ebuild:
  Version bump

*pegasos-dev-sources-2.6.8.1-r2 (22 Aug 2004)

  22 Aug 2004; David Holm <dholm@gentoo.org>
  -pegasos-dev-sources-2.6.8.1-r1.ebuild,
  +pegasos-dev-sources-2.6.8.1-r2.ebuild:
  Added CD/DVD-R fix, bootsplash support and updated the via fix.

*pegasos-dev-sources-2.6.8.1-r1 (17 Aug 2004)

  17 Aug 2004; David Holm <dholm@gentoo.org>
  +pegasos-dev-sources-2.6.8.1-r1.ebuild, -pegasos-dev-sources-2.6.8.1.ebuild,
  -pegasos-dev-sources-2.6.8.ebuild:
  Added missing via82cxxx fix.

*pegasos-dev-sources-2.6.8.1 (16 Aug 2004)

  16 Aug 2004; David Holm <dholm@gentoo.org>
  +pegasos-dev-sources-2.6.8.1.ebuild:
  Version bump.

*pegasos-dev-sources-2.6.8 (14 Aug 2004)

  14 Aug 2004; David Holm <dholm@gentoo.org>
  +pegasos-dev-sources-2.6.8.ebuild:
  Version bump.

*pegasos-dev-sources-2.6.7-r7 (13 Aug 2004)

  13 Aug 2004; David Holm <dholm@gentoo.org>
  -pegasos-dev-sources-2.6.6-r1.ebuild, -pegasos-dev-sources-2.6.6.ebuild,
  -pegasos-dev-sources-2.6.7-r1.ebuild, -pegasos-dev-sources-2.6.7-r2.ebuild,
  -pegasos-dev-sources-2.6.7-r3.ebuild, -pegasos-dev-sources-2.6.7-r4.ebuild,
  +pegasos-dev-sources-2.6.7-r7.ebuild, -pegasos-dev-sources-2.6.7.ebuild:
  Added fix for yet another race condition in /proc.
  Removed old kernels.
