@@ -1,10 +1,9 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/pegasos-dev-sources/pegasos-dev-sources-2.6.9.ebuild,v 1.1 2004/10/19 08:49:33 dholm Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/pegasos-dev-sources/pegasos-dev-sources-2.6.9.ebuild,v 1.2 2004/11/25 22:49:38 dsd Exp $
 
 ETYPE="sources"
 inherit kernel-2
-detect_version
 
 # Version of gentoo patchset
 GPV=9.0
@@ -19,17 +18,3 @@ UNIPATCH_DOCS="${WORKDIR}/patches/pegpatches-${KV_MAJOR}.${KV_MINOR}-${GPV}/0000
 
 DESCRIPTION="Full sources including the gentoo patchset for the ${KV_MAJOR}.${KV_MINOR} kernel tree on Pegasos computers"
 SRC_URI="${KERNEL_URI} ${GPV_SRC}"
-
-pkg_postinst() {
-	postinst_sources
-
-	ewarn "IMPORTANT:"
-	ewarn "ptyfs support has now been dropped from devfs and as a"
-	ewarn "result you are now required to compile this support into"
-	ewarn "the kernel. You can do so by enabling the following option:"
-	ewarn "    Device Drivers -> Character devices -> Legacy (BSD) PTY Support."
-	echo
-	ewarn "Do not enable preemption. It does not work well on Linux/PowerPC"
-	ewarn "desktop systems."
-	echo
-}
